fixed the badge alignment.
TFS Changeset 1275: http://wtrxtfs2013.watertrax.local:8080/tfs/Linko/LinkoApplications/_versionControl/changeset/1275 

Workitems:
[3941] Coding - Bug 3928:Badges are not middle aligned with menu text
TFS: http://wtrxtfs2013.watertrax.local:8080/tfs/Linko/WorkItemTracking/WorkItem.aspx?artifactMoniker=3941 
Jira: https://aquaticinformatics.atlassian.net/issues/?jql=project%20%3D%20LINKO%20and%20tfsissueid~3941

--- a/Linko.LinkoExchange.Web/Content/AdminLTE/css/AdminLTE.css
+++ b/Linko.LinkoExchange.Web/Content/AdminLTE/css/AdminLTE.css
@@ -688,7 +688,7 @@ a:focus {
   position: absolute;
   right: 10px;
   top: 50%;
-  margin-top: -7px;
+  margin-top: -9px;
 }
 /*
  * Component: Control sidebar. By default, this is the right sidebar.
